--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,8 +11,7 @@
         <div class="row">
           <div class="col-lg-10">
             <p class="lead text-muted text-center mt-4 mb-4">
-              Lorem ipsum dolor sit amet, consectetur. Eiusmod tempor
-              incididunt.
+              Get the most reliable personal medical alert system on the market.
             </p>
           </div>
         </div>
@@ -42,7 +41,7 @@
 <section>
   <div class="container">
     <div class="text-center">
-      <h2>One Provider, Several Services</h2>
+      <h2>One Provider, Multiple Services</h2>
       <p class="lead text-muted mt-2">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         eiusmod.
