--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3 mb-5 mb-lg-0">
-        <div class="footer-logo">MED-TEL</div>
+        <div class="footer-logo">MedTelPlus</div>
       </div>
       <div class="col-lg-3 mb-5 mb-lg-0">
         <h5 class="footer-heading">Site pages</h5>
@@ -16,7 +16,7 @@
       <div class="col-lg-3 mb-5 mb-lg-0">
         <h5 class="footer-heading">Product</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="footer-link">Why Med-Tel?</a></li>
+          <li><a href="#" class="footer-link">Why MedTelPlus?</a></li>
           <li><a href="#" class="footer-link">Agents</a></li>
           <li><a href="#" class="footer-link">Blog</a></li>
           <li><a href="#" class="footer-link">Pricing</a></li>
@@ -38,8 +38,7 @@
       <div class="row">
         <div class="col-lg-6 text-center text-lg-left">
           <p class="copyrights-text mb-3 mb-lg-0">
-            &copy; All rights reserved. Global Technology Services Design by
-            <a href="" class="external footer-link">JFlynn Designs </a>
+            &copy; All rights reserved. MedTelPlus 2019
           </p>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
