--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <!-- Hero Section-->
 <section class="hero">
-  <div class="hero-background" style=""></div>
   <div class="container mb-5">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
@@ -10,8 +9,9 @@
         </h1>
         <div class="row">
           <div class="col-lg-10">
-            <p class="lead text-muted text-center mt-4 mb-4">
-              Get the most reliable personal medical alert system on the market.
+            <p class="lead text-center mt-4 mb-4">
+              Get the most reliable and customizable medical tele-care on the
+              market.
             </p>
           </div>
         </div>
@@ -20,10 +20,10 @@
             <input
               type="email"
               name="email"
-              placeholder="Name@company.com"
+              placeholder="Enter your email"
               class="form-control"
             />
-            <button type="submit" class="btn btn-primary">Get Started</button>
+            <button type="submit" class="btn border-light btn-primary">Learn More</button>
           </div>
         </form>
       </div>
@@ -37,95 +37,120 @@
     </div>
   </div>
 </section>
+<!-- end Hero -->
+
 <!-- Intro Section-->
-<section>
+<section class="intro-section">
   <div class="container">
     <div class="text-center">
       <h2>One Provider, Multiple Services</h2>
       <p class="lead text-muted mt-2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-        eiusmod.
+        With more packages to choose from, MedTel gives you what you need,
+        period.
       </p>
-      <a href="#" class="btn btn-primary">Learn More</a>
+      <a href="#" class="btn btn-primary btn-outline-light">Learn More</a>
     </div>
     <div class="row">
-      <div class="col-lg-7 mx-auto mt-5">
-        <img
-          src="assets/img/illustration-1.svg"
-          alt="..."
-          class="intro-image img-fluid"
-        />
+      <div class="card col-lg-4 col-md-12 mt-5 card">
+        <img class="card-img-top" src="assets/images/doctor.png" width="80" alt="">
+        <div class="card-body text-center">
+          <h4 class="card-title">Trusted Health Providers</h4>
+          <p class="card-text">Find all the services that you need</p>
+        </div>
+      </div>
+      <div class="card col-lg-4 col-md-12 mt-5 card">
+        <img class="card-img-top" src="assets/images/police.png" width="80" alt="">
+        <div class="card-body text-center">
+          <h4 class="card-title">We Keep You Safe</h4>
+          <p class="card-text">911 Help Now alert devices keep you in contact with law enforcement.</p>
+        </div>
+      </div>
+      <div class="card col-lg-4 col-md-12 mt-5 card">
+        <img class="card-img-top" src="assets/images/agent.png" width="80" alt="">
+        <div class="card-body text-center">
+          <h4 class="card-title">24/7 Friendly Support</h4>
+          <p class="card-text">MedTelPlus offers several ways to contact us so you're never on your own.</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
+<!-- end Intro -->
+
+<!-- Page divider 0 -->
 <app-divider [content]="dividers[0]"> </app-divider>
+<!-- end Divider-->
+
 <!-- Portfolio Section-->
 <section class="pb-0">
   <div class="container">
     <div class="text-center">
       <h2 class="text-uppercase text-bold">Shop</h2>
       <p class="lead text-muted mt-2">
-        Discover all of MED-TEL Products
+        Discover all MedTelPlus Products
       </p>
     </div>
     <div class="portfolio mt-5">
       <div class="row">
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-1.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-1.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_green.png" alt="image" class="img-fluid"
           /></a>
         </div>
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-2.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-2.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_grey.png" alt="image" class="img-fluid"
           /></a>
         </div>
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-3.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-3.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_gun-grey.png" alt="image" class="img-fluid"
           /></a>
         </div>
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-4.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-4.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_yellow.png" alt="image" class="img-fluid"
           /></a>
         </div>
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-5.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-5.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_pink.png" alt="image" class="img-fluid"
           /></a>
         </div>
         <div class="col-lg-4 p-0">
           <a
-            href="assets/img/portfolio-6.jpg"
+            href="#"
             data-lightbox="image-1"
             data-title="Some footer information"
             class="portfolio-item"
-            ><img src="assets/img/portfolio-6.jpg" alt="image" class="img-fluid"
+            ><img src="assets/images/pendant_white.png" alt="image" class="img-fluid"
           /></a>
         </div>
       </div>
     </div>
   </div>
 </section>
+<!-- end Portfolio -->
+<!-- Page divider 1 -->
+<app-divider [content]="dividers[1]"> </app-divider>
+<!-- end Divider-->
