--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -9,6 +9,10 @@ nav.navbar {
 }
 
 nav.navbar.active {
+  @media all and (min-width: 760px) {
+    background: transparent;
+  }
+
   background: #fff;
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
