--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -1,16 +1,21 @@
 <!-- Divider Section-->
-<section class="bg-primary text-white">
+<section [ngClass]="dividerColors.bgColor">
   <div class="container">
     <div class="text-center">
-      <h2>{{ dividerContent?.title }}</h2>
+      <h2 [ngClass]="dividerColors.title">
+        {{ dividerContent.title }}
+        <i class="fa" [ngClass]="dividerContent.icon"></i>
+      </h2>
       <div class="row">
         <div class="col-lg-9 mx-auto">
-          <p class="lead text-white mt-2">
+          <p class="lead mt-2" [ngClass]="dividerColors.text">
             {{ dividerContent?.text }}
           </p>
         </div>
       </div>
-      <a href="#" class="btn btn-outline-light">Learn More</a>
+      <a href="#" class="btn" [ngClass]="dividerColors.cta"
+        >Learn More</a
+      >
     </div>
   </div>
 </section>
