--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,21 +33,14 @@
           >About</a
         >
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item">
         <a
           id="pages"
-          href=""
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-          class="nav-link dropdown-toggle"
+          routerLink="/store"
+          routerLinkActive="active"
+          class="nav-link"
           >Shop</a
         >
-        <div class="dropdown-menu">
-          <a href="#" class="dropdown-item">911HelpNow</a
-          ><a href="#" class="dropdown-item">Hearing Aids</a
-          ><a href="#" class="dropdown-item">Other</a>
-        </div>
       </li>
     </ul>
   </app-navbar>
