--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,71 @@
-<p>
-  contact works!
-</p>
+<section class="hero" style="background-image: url(assets/images/phone-bg.jpg); background-position: bottom center;">
+      <div class="container text-center">
+        <!-- breadcrumb-->
+        <nav aria-label="breadcrumb" class="d-flex justify-content-center">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="" class="animsition-link">Home</a></li>
+            <li aria-current="page" class="breadcrumb-item active">Contact </li>
+          </ol>
+        </nav>
+        <h1 class="hero-heading">Talk with our sales team</h1>
+        <div class="row">
+          <div class="col-lg-7 mx-auto">
+            <p class="lead mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact Section-->
+    <section>
+      <div class="container">
+        <header class="section-header">
+          <h2 class="mb-2">Fill out the form</h2>
+          <p class="lead">Please submit your information and we will follow up with you as soon as possible.</p>
+        </header>
+        <div class="row align-items-center mt-5">
+          <div class="col-lg-7">
+            <form action="#" class="contact-form text-left">
+              <div class="form-group mb-4">
+                <label>Name<sup class="text-primary">&#10033;</sup></label>
+                <input type="text" name="name" placeholder="e.g. John Smith" class="form-control">
+              </div>
+              <div class="form-group mb-4">
+                <label>Email<sup class="text-primary">&#10033;</sup></label>
+                <input type="text" name="email" placeholder="you@email.com" class="form-control">
+              </div>
+              <div class="form-group mb-4">
+                <label>Subject<sup class="text-primary">&#10033;</sup></label>
+                <input type="text" name="subject" placeholder="Briefly describe your question" class="form-control">
+              </div>
+              <div class="form-group mb-4">
+                <label>Now let's hear the details<sup class="text-primary">&#10033;</sup></label>
+                <textarea name="message" placeholder="Let us know what you need" class="form-control"></textarea>
+              </div>
+              <div class="form-group">
+                <input type="submit" value="Send message" class="btn btn-primary">
+              </div>
+            </form>
+          </div>
+          <div class="col-lg-5 contact-details mt-5 mt-lg-0">
+            <div class="box">
+              <div class="icon d-flex align-items-end"><img src="assets/img/placeholder.svg" alt="" class="img-fluid"></div>
+              <h5>Address</h5>
+              <p class="text-small font-weight-light">1630 Turkey Run Drive, Newark, OH, 43055</p>
+            </div>
+            <div class="box">
+              <div class="icon d-flex align-items-end"><img src="assets/img/technology.svg" alt="" class="img-fluid"></div>
+              <h5>Call center</h5>
+              <p class="text-small font-weight-light">This number is toll free for your convenience, but electronic communication is preferred.</p><strong class="text-muted">+1 844 879 4788</strong>
+            </div>
+            <div class="box">
+              <div class="icon d-flex align-items-end"><img src="assets/img/multimedia.svg" alt="" class="img-fluid"></div>
+              <h5>Electronic support</h5>
+              <p class="text-small font-weight-light">Please feel free to write an email to us or to send a message from this page.</p>
+              <ul class="text-left">
+                <li><a href="mailto:info@medtelplus.com" class="text-small">info@medtelplus.com</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
