--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <!-- TODO: login/registration modal -->
 
 <!-- navbar-->
-<nav class="navbar navbar-expand-lg bg-light">
+<nav #navbar class="navbar navbar-expand-lg">
   <div class="container">
     <a href="#" class="navbar-brand">
       <img
