--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -136,104 +136,7 @@ button {
   }
 }
 
-/*
-* =====================================================
-*     NAVBAR
-* =====================================================
 
-nav.navbar {
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-nav.navbar.active {
-  background: #fff;
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
-}
-
-nav.navbar .dropdown-menu {
-  margin-top: 1.4rem;
-}
-
- NAVBAR MEDIAQUERY
-@media (max-width: 991.98px) {
-  nav.navbar {
-    background: #fff;
-    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
-  }
-
-  nav.navbar .dropdown-menu {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-}
-*/
-
-/*
-* =====================================================
-*     FOOTER
-* =====================================================
-
-footer.main-footer {
-  padding: 7rem 0;
-  background: #E7475E;
-  color: #fff;
-  padding-bottom: 0;
-}
-
-.footer-logo {
-  width: 7.5rem;
-}
-
-.footer-link {
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 300;
-  margin: 0.3rem 0;
-}
-
-.footer-link:hover,
-.footer-link:focus {
-  color: #fff;
-}
-
-.social-link {
-  color: #fff;
-  font-size: 0.9rem;
-  margin: 0 0.625rem;
-}
-
-.social-link:hover {
-  color: #fff;
-}
-
-.footer-heading {
-  margin-bottom: 1.25rem;
-  font-weight: 600;
-}
-
-.copyrights-text {
-  font-weight: 300;
-  font-size: 0.9rem;
-}
-
-.copyrights {
-  margin-top: 2rem;
-  padding: 1.25rem 0;
-}
-*/
-
-/*
-
-=====================
-STYLE SWITCHER FOR DEMO
-=====================
-
-*/
 #style-switch-button {
   position: fixed;
   top: 120px;
@@ -267,10 +170,11 @@ STYLE SWITCHER FOR DEMO
 */
 .hero {
   padding: 8.5rem 0;
-  background: url('../assets/img/hero-bg.png') no-repeat;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100%;
   background-position: top center;
   width: 100%;
+  max-height: 600px;
 
   .hero-heading,
   .lead {
@@ -336,6 +240,7 @@ STYLE SWITCHER FOR DEMO
 .intro-section {
   .card {
     border: none;
+
     .card-img-top {
       margin: 0 auto;
       max-width: 75%;
