--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section-->
-    <section class="hero" style="background: url(assets/images/faq-bg.jpg); background-size: 100%; background-repeat: no-repeat;">
+    <section class="hero" style="background-image: url(assets/images/faq-bg.jpg);">
       <div class="container text-center">
         <!-- breadcrumb-->
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
