--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Hero Section-->
-<section class="hero" [style.background-image]="'url(assets/img/hero-bg.png)'">
+<section class="hero" style="background-image: url(assets/img/hero-bg.png);">
   <div class="container mb-5">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
