--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,24 +10,27 @@
         src="assets/img/cross_logo.png"
         width="25"
         height="25"
-        style=""
-        class="img-thumbnail bg-warning"
+        style="border: 2px solid #1b1818;"
+        class=""
         alt=""
       />
       MedTelPlus
     </a>
     <button
       type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
+      (click)="toggleMobileMenu()"
       aria-controls="navbarSupportedContent"
       aria-expanded="false"
       aria-label="Toggle navigation"
       class="navbar-toggler navbar-toggler-right"
     >
-      <i class="fa fa-bars fa-2x ml-2"></i>
+      <i style="font-size: 1.25em" class="fa fa-bars ml-2"></i>
     </button>
-    <div id="navbarSupportedContent" class="collapse navbar-collapse">
+    <div
+      id="navbarSupportedContent"
+      class="navbar-collapse"
+      [ngClass]="mobileMenu ? 'collapse' : ''"
+    >
       <ng-content></ng-content>
       <a
         href="#"
