--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -171,8 +171,8 @@ button {
 .hero {
   padding: 8.5rem 0;
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: top center;
+  background-size: cover;
+  background-position: center;
   width: 100%;
   max-height: 600px;
 
