--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,10 +7,10 @@
             <li aria-current="page" class="breadcrumb-item active">Contact </li>
           </ol>
         </nav>
-        <h1 class="hero-heading">Talk with our sales team</h1>
+        <h1 class="hero-heading animated" data-aos="fade-up">Talk with our sales team</h1>
         <div class="row">
           <div class="col-lg-7 mx-auto">
-            <p class="lead mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+            <p class="lead mt-2 animted" data-aos="fade-right" data-aos-delay=".5">Have questions or comments? The form below is the best way to contact MedTelPlus for inquiries,One of our experienced and friendly staff will contact you within 48 hours of your message.</p>
           </div>
         </div>
       </div>
@@ -47,21 +47,21 @@
             </form>
           </div>
           <div class="col-lg-5 contact-details mt-5 mt-lg-0">
-            <div class="box">
+            <div class="box animated" data-aos="fade-left" data-aos-delay=".3">
               <div class="icon d-flex align-items-end"><img src="assets/img/placeholder.svg" alt="" class="img-fluid"></div>
               <h5>Address</h5>
               <p class="text-small font-weight-light">1630 Turkey Run Drive, Newark, OH, 43055</p>
             </div>
-            <div class="box">
+            <div class="box animated" data-aos="fade-left" data-aos-delay=".3">
               <div class="icon d-flex align-items-end"><img src="assets/img/technology.svg" alt="" class="img-fluid"></div>
               <h5>Call center</h5>
               <p class="text-small font-weight-light">This number is toll free for your convenience, but electronic communication is preferred.</p><strong class="text-muted">+1 844 879 4788</strong>
             </div>
-            <div class="box">
+            <div class="box animated" data-aos="fade-left" data-aos-delay=".3">
               <div class="icon d-flex align-items-end"><img src="assets/img/multimedia.svg" alt="" class="img-fluid"></div>
               <h5>Electronic support</h5>
-              <p class="text-small font-weight-light">Please feel free to write an email to us or to send a message from this page.</p>
-              <ul class="text-left">
+              <p class="text-small font-weight-light">Please feel free to write us an email.</p>
+              <ul class="text-center">
                 <li><a href="mailto:info@medtelplus.com" class="text-small">info@medtelplus.com</a></li>
               </ul>
             </div>
