--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-<!-- FIXME: menu collapses depending on screen width -->
 <!-- TODO: sticky navbar?? change between fixed and absolute on scroll -->
 <!-- TODO: login/registration modal -->
 
@@ -7,14 +6,12 @@
   <div class="container">
     <a href="#" class="navbar-brand">
       <img
-        src="assets/img/cross_logo.png"
-        width="25"
-        height="25"
-        style="border: 2px solid #1b1818;"
+        src="assets/images/logo_full.svg"
+        width="120"
+        style=""
         class=""
         alt=""
       />
-      MedTelPlus
     </a>
     <button
       type="button"
