--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -8,14 +8,14 @@
       </h2>
       <div class="row">
         <div class="col-lg-9 mx-auto">
-          <p class="lead mt-2" [ngClass]="dividerColors.text">
-            {{ dividerContent?.text }}
-          </p>
+          <p
+            class="lead mt-2"
+            [ngClass]="dividerColors.text"
+            [innerHTML]="dividerContent.text"
+          ></p>
         </div>
       </div>
-      <a href="#" class="btn" [ngClass]="dividerColors.cta"
-        >Learn More</a
-      >
+      <a href="#" class="btn" [ngClass]="dividerColors.cta">Learn More</a>
     </div>
   </div>
 </section>
