--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import 'fonts';
+@import 'animate.css/animate.css';
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/variables';
 @import '~font-awesome/css/font-awesome.css';
@@ -597,6 +598,17 @@ button {
 
 .navbar-dark .navbar-text {
   color: rgba(255, 255, 255, 0.5);
+}
+
+.sidenav {
+  position: absolute;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  text-align: center;
 }
 
 /*
